--- a/src/app/nova-transferencia/nova-transferencia.component.html
+++ b/src/app/nova-transferencia/nova-transferencia.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-field">
       <label class="form-field__label" for="destino">Destino</label>
-      <input class="form-field__input" id="destino" type="text" [(ngModel)]="destino" name="destino">
+      <input class="form-field__input" id="destino" type="number" [(ngModel)]="destino" name="destino">
     </div>
 
     <div class="botao-wrapper">
